# hybrid-semantic-search-20260718

./: ARCHITECTURE.md  DATASET_CARD.md  Dockerfile  LICENSE  MODEL_CARD.md  PORTFOLIO.md  PRODUCTION.md  README.md  REFERENCES.md  ROADMAP.md  SECURITY.md  docker-compose.yml  evaluate.py  pyproject.toml  requirements-production.txt  train.py
.github/workflows/: ci.yml
artifacts/: model.json
config/: project.json
data/: test.jsonl  train.jsonl
infra/: schema.sql
src/hybrid_semantic_search/: __init__.py  cli.py  pipeline.py  real_world.py  service.py
tests/: test_pipeline.py
